전체적인 추가 로직 및 테스트 코드 추가 수정